--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "hamburger-react": "^2.5.0",
     "next": "13.5.4",
     "react": "^18",
+    "react-countup": "^6.4.2",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-scroll-trigger": "^0.6.14"
   },
   "devDependencies": {
     "@types/node": "^20",
