--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react": "^18",
     "react-countup": "^6.4.2",
     "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "react-scroll-trigger": "^0.6.14"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
