added artifacts in workflow to get files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,8 @@ jobs:
        run: npm run build
      - name: Export Webiste
        run: npm run export
+     - name: Upload artifacts
+       uses: actions/upload-artifact@v4
+       with: 
+        name: deploy-files
+        path: out
